--- a/login/index_form.html
+++ b/login/index_form.html
@@ -24,8 +24,8 @@ if (!empty($CFG->loginpasswordautocomplete)) {
           <?php
             print_string("loginusing");
             echo '<br/>';
-            echo '('.get_string("cookiesenabled").')';
-            echo $OUTPUT->help_icon('cookiesenabled');
+            //echo '('.get_string("cookiesenabled").')';
+            //echo $OUTPUT->help_icon('cookiesenabled');
            ?>
         </div>
         <?php
@@ -46,19 +46,20 @@ if (!empty($CFG->loginpasswordautocomplete)) {
             <div class="form-label"><label for="password"><?php print_string("password") ?></label></div>
             <div class="form-input">
               <input type="password" name="password" id="password" size="15" value="" <?php echo $autocomplete; ?> />
-              <input type="submit" id="loginbtn" value="<?php print_string("login") ?>" />
+              <br /><input type="submit" id="loginbtn" value="<?php print_string("login") ?>" />
             </div>
           </div>
             <div class="clearer"><!-- --></div>
               <?php if (isset($CFG->rememberusername) and $CFG->rememberusername == 2) { ?>
               <div class="rememberpass">
-                  <input type="checkbox" name="rememberusername" id="rememberusername" value="1" <?php if ($frm->username) {echo 'checked="checked"';} ?> />
+                  <br /><input type="checkbox" name="rememberusername" id="rememberusername" value="1" <?php if ($frm->username) {echo 'checked="checked"';} ?> />
                   <label for="rememberusername"><?php print_string('rememberusername', 'admin') ?></label>
               </div>
               <?php } ?>
           <div class="clearer"><!-- --></div>
-          <div class="forgetpass"><a href="forgot_password.php"><?php print_string("forgotten") ?></a></div>
-        </form>
+          <br /><div class="forgetpass"><a href="forgot_password.php"><?php print_string("forgotten") ?></a></div>
+	  <div class="clearer"><!-- --></div>
+	  </form>
       </div>
 
 <?php if ($CFG->guestloginbutton and !isguestuser()) {  ?>
