even better login page

--- a/login/index_form.html
+++ b/login/index_form.html
@@ -57,7 +57,7 @@ if (!empty($CFG->loginpasswordautocomplete)) {
               <?php } ?>
           <div class="clearer"><!-- --></div>
         <div class="desc"><br />
-          <icon class="icon-frown" /> Forgotten your username or password?
+          <icon class="icon-frown" /> Forgotten your password?
 	</div>
           <button style="font-family:Tahoma;font-size:1.5em;"><a href="forgot_password.php"><?php print_string("forgotten") ?></a></button>
 	  <div class="clearer"><!-- --></div>
